Cambiando titulos de enlafes a transferencias

--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -128,10 +128,10 @@
                         <select id="listado-transferencias" class="pull-right" name="transferencias">
                             <option value=""></option>
                             <option value="{% url 'transferencias' %}">
-                                Transferencias
+                                 Evolución de la partida presupuestaria 
                             </option>
                             <option value="{% url 'tasa_transferencias' %}">
-                                Tasa de Transferencias
+                                Tasa de crecimiento promedio anual
                             </option>
                         </select>
                     </form>
