--- a/core/static/css/pma-icon.css
+++ b/core/static/css/pma-icon.css
@@ -33,7 +33,8 @@
 /* 4 - Transferencias y donaciones */
 
 .transferencias-y-donaciones:before {
-    content: "\e6a1";
+    content: url(../new-icons/ingresos/otras_transferencias_donacioes.png);
+    display: flex;
 }
 /* 6 - Transferencias */
 
@@ -48,12 +49,14 @@
 /* 3 - Otros */
 
 .otros-gastos:before {
-    content: "\e617";
+    content: url(../new-icons/gastos/otros_Destinos.png);
+    display: flex;
 }
 /* 5 - Préstamos */
 
-.prestamos:before {
-    content: "\e69d";
+.prestamos::before{
+    content: url(../new-icons/ingresos/endeudamiento.png);
+    display: flex;
 }
 /* 5 - Materiales y Sumistros */
 
@@ -63,7 +66,8 @@
 /* 3 - Otras transferencias del gobierno central */
 
 .otras-transferencias-del-gobierno-central:before {
-    content: "\e6a8";
+    content: url(../new-icons/ingresos/otras_transferncias_gobierno_central.png);
+    display: flex;
 }
 /* 1 - Gastos de Personal */
 
@@ -73,17 +77,29 @@
 /* 6 - Otros origenes */
 
 .otros-origenes:before {
-    content: "\e695";
+    content: url(../new-icons/ingresos/otros_origenes.png);
+    display: flex;
 }
 /* 2 - Servicios No Personales */
 
 .inversion:before {
-    content: "\e64d";
+    content: url(../new-icons/gastos/servicios_materiales_productos.png);
+    display: flex;
 }
 /* 4 - Bienes de Uso/Inversión */
 
 .servicios-no-personaler:before {
     content: "\e60a";
+}
+
+/* servcios a la deuda*/
+.servcios-a-la-deuda:before{
+    content: url(../new-icons/gastos/servicios_deuda_publica.png);
+    display: flex;
+}
+.servicios-no-personales:before{
+    content: url(../new-icons/gastos/activos_no_financieros.png);
+    display: flex;
 }
 
 .initial:before{
@@ -105,7 +121,8 @@
 }
 /*seguridad alimentaria */
 .seguridad-alimentaria:before{
-    content: "\e6b8";
+    content: url(../new-icons/inversion/seguridad_alimentaria.png);
+    display: flex;
 }
 .educacion-escuelas-alfabetizacion-becas:before {
     content: "\e60f";
