importador de transferencias

--- a/core/templates/upload_excel.html
+++ b/core/templates/upload_excel.html
@@ -8,6 +8,20 @@
         <div class="row">
             <div class="col-md-11 col-lg-11">
                 <form method="post" enctype="multipart/form-data">
+                    {% if form.errors %}
+                        {% for field in form %}
+                            {% for error in field.errors %}
+                                <div class="alert alert-danger">
+                                    <strong>{{ field.name }}: {{ error|escape }}</strong>
+                                </div>
+                            {% endfor %}
+                        {% endfor %}
+                        {% for error in form.non_field_errors %}
+                            <div class="alert alert-danger">
+                                <strong>{{ error|escape }}</strong>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                     {% csrf_token %}
                     <h4>
                         <strong>Formulario de importaci&oacute;n</strong>
@@ -87,8 +101,10 @@ $(document).ready(function() {
 	$('input:radio[name=table]').change(function() {
 		if (this.value == 'transferencia') {
 			$("#id_municipio").prop('disabled', 'disabled');
+			$("#id_municipio").prop('required', 'required');
 		} else {
 			$("#id_municipio").removeAttr("disabled");
+			$("#id_municipio").removeAttr("required");
 		}
 	});
 });
