eliminando clase css height-horizontal-bar

--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -183,7 +183,7 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="col-lg-6 col-md-6 height-horizontal-bar">
+                    <div class="col-lg-6 col-md-6 ">
                         <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
                         </div>
                     </div>
