--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -402,7 +402,7 @@
                             {% endcomment %}
                             </table>
                         </div>
-                        <div class="col-lg-7 col-md-7 col-sm-12 height-horizontal-bar">
+                        <div class="col-lg-7 col-md-7 col-sm-12">
                             <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
                             </div>
                         </div>
