--- a/core/templates/ep.html
+++ b/core/templates/ep.html
@@ -391,7 +391,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="col-lg-7 col-md-7 col-sm-12 height-horizontal-bar">
+                    <div class="col-lg-7 col-md-7 col-sm-12">
                         <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
                         </div>
                     </div>
