--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -176,7 +176,7 @@
                         </table>
                     </div>
                     {# chart horizontal bar #}
-                    <div class="col-lg-8 col-md-6 col-sm-12 mt-1 height-horizontal-bar">
+                    <div class="col-lg-8 col-md-6 col-sm-12 mt-1">
                         <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
                         </div>
                     </div>
