mostrando mensaje de Informacion no disponible para graficos de barra ó columna

--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -220,7 +220,7 @@
                     </div>
                     {# chart horizontal chart #}
                     <div class="col-lg-8 col-md-8 col-sm-12 mt-1">
-                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                        <div id="bar_horizontal" class="view-alternative"> <h3>Informaci&oacute;n no disponible</h3>
                         </div>
                     </div>
                 </div>
