--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -260,7 +260,7 @@
                     </div>
                     {# chart horizontal chart #}
                     <div class="col-lg-7 col-md-7 col-sm-12">
-                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                        <div id="bar_horizontal" class="view-alternative"> <h3>Informaci&oacute;n no disponible</h3>
                         </div>
                     </div>
                 </div>
@@ -403,7 +403,7 @@
                             </table>
                         </div>
                         <div class="col-lg-7 col-md-7 col-sm-12">
-                            <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                            <div id="bar_horizontal" class="view-alternative"> <h3>Informaci&oacute;n no disponible</h3>
                             </div>
                         </div>
                     </div>
