--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -177,7 +177,7 @@
                     </div>
                     {# chart horizontal bar #}
                     <div class="col-lg-8 col-md-6 col-sm-12 mt-1">
-                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                        <div id="bar_horizontal" class="view-alternative"> <h3>Informaci&oacute;n no disponible</h3>
                         </div>
                     </div>
                 </div>
@@ -510,7 +510,7 @@
                 </div>
                 {# chart horizontal chart #}
                 <div class="col-lg-7 col-md-7 col-sm-12 mt-1 horizontal-bar">
-                    <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                    <div id="bar_horizontal" class="view-alternative"> <h3>Informaci&oacute;n no disponible</h3>
                     </div>
                 </div>
             </div>
