--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -270,7 +270,7 @@
                         </table>
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-12">
-                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                        <div id="bar_horizontal" class="view-alternative"> <h3>Informaci&oacute;n no disponible</h3>
                         </div>
                     </div>
                 {% elif not municipio and request.resolver_match.url_name == 'ejecucion_presupuesto' %}
@@ -385,7 +385,7 @@
                         </table>
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-12 ">
-                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                        <div id="bar_horizontal" class="view-alternative"> <h3>Informaci&oacute;n no disponible</h3>
                         </div>
                     </div>
                 </div>
