--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -184,7 +184,7 @@
                         </table>
                     </div>
                     <div class="col-lg-6 col-md-6 ">
-                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                        <div id="bar_horizontal" class="view-alternative"> <h3>Informaci&oacute;n no disponible</h3>
                         </div>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
                         </table>
                     </div>
                     <div class="col-lg-7 col-md-7">
-                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                        <div id="bar_horizontal" class="view-alternative"> <h3>Informaci&oacute;n no disponible</h3>
                         </div>
                     </div>
                 </div>
