--- a/core/templates/ep.html
+++ b/core/templates/ep.html
@@ -808,5 +808,5 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    {{ charts|load_charts:"pie,bar,pie2,bar2,bar_horizontal" }}
+    {{ charts|load_charts:"pie,bar,pie2,bar2" }}
 {% endblock %}
