--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -137,7 +137,7 @@
                             </span>
                         </div>
                     </div>
-                {% elif forloop.counter < otros|length and municipio|lower == row|get_name_municipio|lower %} %}
+                {% elif forloop.counter < otros|length and municipio|lower == row|get_name_municipio|lower %}
                     <div class="balloon-dialogue second-balloon-dialogue">
                         <strong>
                             {% for letter in 'POSICIÓN'|make_list %}
