--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -127,7 +127,9 @@
                                     {% if periodo_list|keyvalue:year == 'A' %}P. Intermedio{% else %}P.
                                         Cierre{% endif %}
                                 </th>
+				{% if periodo_list|keyvalue:year != 'I' %}
                                 <th class="no-border-top text-right">%</th>
+				{% endif %}
                             </tr>
                             </thead>
                             <tbody>
@@ -148,9 +150,11 @@
                                             {{ row.ejecutado|floatformat:2|intcomma|default:0 }}
                                         {% endif %}
                                     </td>
+				    {% if periodo_list|keyvalue:year != 'I' %}
                                     <td class="text-right">
                                         {% widthratio row.ejecutado row.asignado 100 %}
                                     </td>
+				    {% endif %}
                                 </tr>
                             {% endfor %}
                             <tr class="pma-bg-white">
