renombrando campo nombre en configuracion de excel para ogm1

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -132,7 +132,7 @@
                         Presupuesto inicial de gastos
                     {% endif %}
                     {{ year }}
-                    por su destino {% descargar_excel "oim1" %}</h5>
+                    por su destino {% descargar_excel "ogm1" %}</h5>
                 <table class="table table-bordered table-condensed">
                     <thead>
                     <tr class="bg-primary">
