renombrando campos y correccion de nombres de configuraciones de excel para generar el excel

--- a/core/templates/ep.html
+++ b/core/templates/ep.html
@@ -57,7 +57,7 @@
                                     Presupuesto inicial de ingresos
                                 {% endif %}
                                 {{ year }}
-                                por su origen {% descargar_excel "oim1" %}</h5>
+                                por su origen {% descargar_excel "ep3" %}</h5>
                         </td>
                     </tr>
                     <tr class="bg-primary">
@@ -137,7 +137,7 @@
                                     Presupuesto inicial de gastos
                                 {% endif %}
                                 {{ year }}
-                                por su destino {% descargar_excel "oim1" %}</h5>
+                                por su destino {% descargar_excel "ep6" %}</h5>
                         </td>
                     </tr>
                     <tr class="bg-primary">
