--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -65,7 +65,7 @@
                                     Presupuesto inicial de ingresos corrientes
                                 {% endif %}
                                 {{ year }}
-                                por su origen {% descargar_excel "oim1" %}</h5>
+                                por su origen {% descargar_excel "ago3" %}</h5>
                         </td>
                     </tr>
                     <tr class="bg-primary">
@@ -146,7 +146,7 @@
                                     Presupuesto inicial de gastos corrientes
                                 {% endif %}
                                 {{ year }}
-                                por su destino {% descargar_excel "oim1" %}</h5>
+                                por su destino {% descargar_excel "ago6" %}</h5>
                         </td>
                     </tr>
                     <tr class="bg-primary">
