mostrando el periodo y partido politico en la tabla de segundo municipio

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -165,10 +165,10 @@
                         <td>TOTAL</td>
                         {% if periodo_list|keyvalue:year == 'I' %}
                             <td class="text-center">{{ asignado|million|intcomma }}</td>
-                            <td class="text-center">{{ rubros|total_sum:"ini_asig_porcentaje"|floatformat:0 }}</td>
+                            <td class="text-center">{{ rubros|total_sum:"ini_asig_porcentaje"|floatformat:0 }}%</td>
                         {% else %}
                             <td class="text-center">{{ ejecutado|million|intcomma }}</td>
-                            <td class="text-center">{{ rubros|total_sum:"ejec_porcentaje"|floatformat:0 }}</td>
+                            <td class="text-center">{{ rubros|total_sum:"ejec_porcentaje"|floatformat:0 }}%</td>
                         {% endif %}
                     </tr>
                     </tbody>
