--- a/core/templates/transferencias.html
+++ b/core/templates/transferencias.html
@@ -33,7 +33,7 @@
     <div class="container wide">
         <div class="row">
             {% if request.GET.municipio %}
-	        <h3>Evolución de la asignación según uso, municipio de {{ municipio }}</h3>
+                <h3>Evolución de la asignación según uso, municipio de {{ municipio }}</h3>
                 <h4>Millones de córdobas corrientes</h4>
                 <hr class="pma-line-1"/>
                 <div class="col-lg-12 col-md-12 col-sm-12">
@@ -53,9 +53,12 @@
                     <table class="table table-responsive table-bordered small-font">
                         <thead>
                         <tr class="bg-primary">
-                            <th class="fixed" rowspan=2>Asignación Anual</th>
+                            <th class="fixed" rowspan="2">Asignación Anual</th>
                             {% for year in years %}
-                                {% ifchanged %}<th colspan="{{ year.span }}" class="text-center">{{ year.periodo }}<br>{{ year.partido }}</th>{% endifchanged %}
+                                {% ifchanged %}
+                                    <th colspan="{{ year.span }}"
+                                        class="text-center">{{ year.periodo }}<br>{{ year.partido }}</th>
+                                {% endifchanged %}
                             {% endfor %}
                         </tr>
                         <tr class="bg-primary">
@@ -80,36 +83,44 @@
                     <div id="stacked_chart"></div>
                 </div>
                 {% if request.GET.municipio2 %}
-		    <div class="mt-3">
-	            <h3>Evolución de la asignación según uso, municipio de {{ municipio2 }}</h3>
-                    <h4>Millones de córdobas corrientes</h4>
-                    <hr class="pma-line-1"/>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <table class="table table-responsive table-bordered small-font">
-                            <thead>
-                            <tr class="bg-primary">
-                                <th class="fixed">Asignación Anual</th>
-                                {% for year in years2 %}
-                                    <th>{{ year.year }}<br>{{ year.clasificacion }}</th>
-                                {% endfor %}
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for asignacion in asignaciones %}
-                                <tr>
-                                    <td class="fixed">{{ asignacion }}</td>
-                                    {% for row in data_asignacion2|keyvalue:asignacion %}
-                                        <td>{{ row|million }}</td>
+                    <div class="mt-3">
+                        <h3>Evolución de la asignación según uso, municipio de {{ municipio2 }}</h3>
+                        <h4>Millones de córdobas corrientes</h4>
+                        <hr class="pma-line-1"/>
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <table class="table table-responsive table-bordered small-font">
+                                <thead>
+                                <tr class="bg-primary">
+                                    <th class="fixed" rowspan="2">Asignación Anual</th>
+                                    {% for year in years2 %}
+                                        {% ifchanged %}
+                                            <th colspan="{{ year.span }}"
+                                                class="text-center">{{ year.periodo }}<br>{{ year.partido }}</th>
+                                        {% endifchanged %}
                                     {% endfor %}
                                 </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
+                                <tr class="bg-primary">
+                                    {% for year in years2 %}
+                                        <th>{{ year.year }}<br>{{ year.clasificacion }}</th>
+                                    {% endfor %}
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for asignacion in asignaciones %}
+                                    <tr>
+                                        <td class="fixed">{{ asignacion }}</td>
+                                        {% for row in data_asignacion2|keyvalue:asignacion %}
+                                            <td>{{ row|million }}</td>
+                                        {% endfor %}
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <div id="stacked_chart2"></div>
+                        </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div id="stacked_chart2"></div>
-                    </div>
-		    </div>
                 {% endif %}
             {% else %}
                 <h3>Evolución de la asignación según uso y por grupo de municipios</h3>
