reemplazando clase => clasificacion

--- a/core/templates/tasa_transferencias.html
+++ b/core/templates/tasa_transferencias.html
@@ -68,7 +68,7 @@
                             {% endfor %}
                         </tr>
                         <tr class="bg-primary">
-                            <th>Clase</th>
+                            <th>Asignaci&oacute;n</th>
                             {% for periodo in periodos %}
                                 {% if not forloop.first %}
                                     <th>{{ periodo }}<br>{{ periodo.clasificacion }}</th>
@@ -128,7 +128,7 @@
                                 {% endfor %}
                             </tr>
                             <tr class="bg-primary">
-                                <th>Clase</th>
+                                <th>Asignaci&oacute;n</th>
                                 {% for periodo in periodos %}
                                     {% if not forloop.first %}
                                         <th>{{ periodo }}<br>{{ periodo.clasificacion }}</th>
